--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body,td,th {
 </head>
 <body>
 <p>Dreamer Game</p>
-<p><img src="logo.jpg"/></p>
+<p><img src="logo.png"/></p>
 <p>Email:coolxiaochuan@gmail.com</p>
 </body>
 </html>
